src/app/snapshots/dotfiles__app__dotfiles_ui__tests__snapshot_dotfiles_script_focused.snap
---
source: src/app/dotfiles_ui.rs
assertion_line: 367
expression: rendered
---
┌Preferences───────────────────────┐┌Tool Details──────────────────────────────────────────────────────────────────────┐
│Tools Settings                    ││Tool: Brew                                                                        │
│> Brew (brew)                     ││ID: brew                                                                          │
│  Gcloud (gcloud)                 ││Path: tests/assets/dotfiles/brew/brew-settings.zsh                                │
│  Helm (helm)                     ││Order: Stage 1                                                                    │
│  Krew (krew)                     ││                                                                                  │
│  Rust (rust)                     ││┌Dependency Map (* current tool)─────────────────────────────────────────────────┐│
│  Zsh (zsh)                       │││* Brew (brew)                                                                   ││
│                                  │││|-- - Gcloud (gcloud)                                                           ││
│                                  │││|   `-- - Zsh (zsh)                                                             ││
│                                  │││|-- - Helm (helm)                                                               ││
│                                  │││|   `-- - Zsh (zsh) (repeat)                                                    ││
│                                  │││|-- - Krew (krew)                                                               ││
│                                  │││|   `-- - Zsh (zsh) (repeat)                                                    ││
│                                  │││`-- - Rust (rust)                                                               ││
│                                  │││    `-- - Zsh (zsh) (repeat)                                                    ││
│                                  ││└────────────────────────────────────────────────────────────────────────────────┘│
│                                  ││┌Script──────────────────────────────────────────────────────────────────────────┐│
│                                  │││  #!/usr/bin/env zsh                                                            ││
│                                  │││  echo "brew script"                                                            ││
│                                  │││                                                                                ││
│                                  │││                                                                                ││
│                                  │││                                                                                ││
│                                  │││                                                                                ││
│                                  │││                                                                                ││
│                                  │││                                                                                ││
│                                  │││                                                                                ││
│                                  │││                                                                                ││
│                                  ││└────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
